--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: CV | A jekyll template
-description:  A beautiful template for your CV.
-url: https://jekyll-cv.stavrospanakakis.com
+title: CV | Jérémie Cloutier-Vilhuber
+description: Jérémie's Curriculum Vitae
+url: https://jeremie.cloutier-vilhuber.net
 baseurl: ''
 theme_skin: blue
 
